--- a/.woodpecker.yml
+++ b/.woodpecker.yml
@@ -8,7 +8,7 @@ steps:
       branch: main
       event: [push, pull_request, tag]
     commands:
-      - echo "deb http://deb.debian.org/debian/ unstable main deb-src http://deb.debian.org/debian/ unstable main" >> /etc/apt/sources
+      - apt update
       - apt install -y flatpak flatpak-builder
       - flatpak remote-add --if-not-exists flathub https://flathub.org/repo/flathub.flatpakrepo
       - flatpak remote-add --if-not-exists gnome-nightly https://nightly.gnome.org/gnome-nightly.flatpakrepo
