--- a/.woodpecker.yml
+++ b/.woodpecker.yml
@@ -8,8 +8,8 @@ steps:
       branch: main
       event: [push, pull_request, tag]
     commands:
-      - flatpak remote-add --if-not-exists gnome-nightly https://nightly.gnome.org/gnome-nightly.flatpakrepo
+      - flatpak install -y org.flatpak.Builder
       - ls -la
-      - flatpak-builder --disable-rofiles-fuse --install-deps-from=gnome-nightly --default-branch=master --force-clean --repo=build-repo build-dir build-aux/flatpak/page.codeberg.SOrg.DogGTK.Devel.json
+      - flatpak run org.flatpak.Builder --disable-rofiles-fuse --install-deps-from=flathub --default-branch=master --force-clean --repo=build-repo build-dir build-aux/flatpak/page.codeberg.SOrg.DogGTK.Devel.json
       - flatpak build-bundle build-repo page.codeberg.SOrg.DogGTK.Devel.flatpak page.codeberg.SOrg.DogGTK.Devel
       - curl --user $CI_REPO_OWNER:$ACCESS_TOKEN --upload-file page.codeberg.SOrg.DogGTK.Devel.flatpak https://codeberg.org/api/packages/$CI_REPO/test_package/nightly/page.codeberg.SOrg.DogGTK.Devel.flatpak
