--- a/.woodpecker.yml
+++ b/.woodpecker.yml
@@ -8,7 +8,7 @@ steps:
       event: [push, pull_request, tag]
     commands:
       - apt-get update
-      - DEBIAN_FRONTEND=noninteractive apt-get install --no-install-recommends --no-install-suggests -y flatpak flatpak-builder sudo
+      - DEBIAN_FRONTEND=noninteractive apt-get install --no-install-suggests -y flatpak flatpak-builder sudo
       - useradd -mUd /var/lib/builder builder
       - su - builder
       - sudo flatpak remote-add --if-not-exists flathub https://flathub.org/repo/flathub.flatpakrepo
