--- a/.forgejo/workflows/build-nightly.yml
+++ b/.forgejo/workflows/build-nightly.yml
@@ -6,7 +6,7 @@ name: Nightly Flatpak Build
 jobs:
   flatpak:
     name: "Flatpak"
-    runs-on: ubuntu-latest
+    runs-on: docker.io/ubuntu:latest
     container:
       image: ghcr.io/flathub-infra/flatpak-github-actions:gnome-nightly
       options: --privileged
