--- a/.github/workflows/sync-with-codeberg.yml
+++ b/.github/workflows/sync-with-codeberg.yml
@@ -16,5 +16,5 @@ jobs:
           fetch-depth: 0
       - uses: pixta-dev/repository-mirroring-action@v1
         with:
-          target_repo_url: "https://codeberg.org/SOrg/Doggo.git"
-          ssh_private_key: ${{ secrets.CODEBERG_MIRROR_TOKEN }}
+          target_repo_url: "git@codeberg.org:SOrg/Doggo.git"
+          ssh_private_key: ${{ secrets.CODEBERG_SSH }}
