--- a/data/app.metainfo.xml.in.in
+++ b/data/app.metainfo.xml.in.in
@@ -2,13 +2,19 @@
 <component type="desktop">
   <id>@appid@</id>
   <name>Doggo</name>
-  <summary>GTK4 + Libadwaita Game themed around a dog</summary>
+  <summary>Clicker &amp; Chance Game</summary>
   <developer_name>Silly Org</developer_name>
   <launchable type="desktop-id">@appid@.desktop</launchable>
   <metadata_license>CC0-1.0</metadata_license>
   <project_license>GPL-3.0-or-later</project_license>
   <description>
-    <p>GTK4 + Libadwaita Actions &amp; AdwNavigationView demo, also kind of a game which lets you feed, pet and... abandon your dog.</p>
+    <p>Doggo has a clicker game &amp; a game with 3 paths to choose:</p>
+    <ol>
+      <li>Petting the Doggo</li>
+      <li>Feeding the Doggo</li>
+      <li>Abandoning the Doggo</li>
+    </ol>
+    <p>The app is also built with GTK4 &amp; Libadwaita</p>
   </description>
   <screenshots>
     <screenshot type="default">
@@ -25,6 +31,12 @@
     </screenshot>
   </screenshots>
   <releases>
+    <release version="4.1" date="2024-01-21" type="stable">
+      <url>https://codeberg.org/SOrg/Doggo/releases/tag/4.1</url>
+      <description>
+        <p>This release of Doggo changes the app icon, summary and description to fit the new Flathub Guidelines.</p>
+      </description>
+    </release>
     <release version="4.0" date="2023-12-19" type="stable">
       <url>https://codeberg.org/SOrg/Doggo/releases/tag/4.0</url>
       <description>
