metainfo: change description slightly

--- a/data/app.metainfo.xml.in.in
+++ b/data/app.metainfo.xml.in.in
@@ -8,7 +8,7 @@
   <metadata_license>CC0-1.0</metadata_license>
   <project_license>GPL-3.0-or-later</project_license>
   <description>
-    <p>Doggo has a clicker game &amp; a chance/random result game with 3 paths to choose:</p>
+    <p>Doggo has a clicker game &amp; a chance/random result game with 3 options/paths to choose:</p>
     <ol>
       <li>Petting the Doggo</li>
       <li>Feeding the Doggo</li>
