--- a/data/app.metainfo.xml.in.in
+++ b/data/app.metainfo.xml.in.in
@@ -2,7 +2,7 @@
 <component type="desktop">
   <id>@appid@</id>
   <name>Doggo</name>
-  <summary>Clicker &amp; Chance Game</summary>
+  <summary>Clicker &amp; chance game</summary>
   <developer_name>Silly Org</developer_name>
   <launchable type="desktop-id">@appid@.desktop</launchable>
   <metadata_license>CC0-1.0</metadata_license>
@@ -30,6 +30,12 @@
     </screenshot>
   </screenshots>
   <releases>
+    <release version="4.2" date="2024-01-29" type="stable">
+      <url>https://codeberg.org/SOrg/Doggo/releases/tag/4.2</url>
+      <description>
+        <p>This release changes the summary slightly to try and fit the new Flathub Guidelines.</p>
+      </description>
+    </release>
     <release version="4.1" date="2024-01-21" type="stable">
       <url>https://codeberg.org/SOrg/Doggo/releases/tag/4.1</url>
       <description>
