--- a/.forgejo/workflows/build-nightly.yml
+++ b/.forgejo/workflows/build-nightly.yml
@@ -11,5 +11,4 @@ jobs:
       options: --privileged
     steps:
     - uses: actions/checkout@v4
-    - run: flatpak-builder --repo=repo --force-clean build-dir page.codeberg.SOrg.DogGTK.Devel.json
-    - run: flatpak build-bundle repo page.codeberg.SOrg.DogGTK.Devel.flatpak page.codeberg.SOrg.DogGTK.Devel
+    - run: flatpak-builder --repo=repo --force-clean build-dir page.codeberg.SOrg.DogGTK.Devel.json && flatpak build-bundle repo page.codeberg.SOrg.DogGTK.Devel.flatpak page.codeberg.SOrg.DogGTK.Devel
