--- a/.forgejo/workflows/build-nightly.yml
+++ b/.forgejo/workflows/build-nightly.yml
@@ -10,4 +10,4 @@ jobs:
       image: ghcr.io/flathub-infra/flatpak-github-actions:gnome-45
       options: --privileged
     steps:
-    - run: git clone https://codeberg.org/SOrg/Doggo.git repo && cd repo && flatpak-builder --repo=repo --force-clean build-dir build-aux/flatpak/page.codeberg.SOrg.DogGTK.Devel.json && flatpak build-bundle repo page.codeberg.SOrg.DogGTK.Devel.flatpak page.codeberg.SOrg.DogGTK.Devel
+    - run: git clone https://codeberg.org/SOrg/Doggo.git repo && cd repo && flatpak-builder --disable-rofiles-fuse --repo=repo --force-clean build-dir build-aux/flatpak/page.codeberg.SOrg.DogGTK.Devel.json && flatpak build-bundle repo page.codeberg.SOrg.DogGTK.Devel.flatpak page.codeberg.SOrg.DogGTK.Devel
