--- a/data/meson.build
+++ b/data/meson.build
@@ -52,6 +52,8 @@ appstream_file = i18n.merge_file(
   install_dir: get_option('datadir') / 'metainfo',
 )
 
+message('DOGGO APP ID: @0@'.format(application_id))
+
 appstreamcli = find_program('appstreamcli', required: false)
 if appstreamcli.found()
   test('Validate appstream file', appstreamcli, args: ['validate', '--no-net', appstream_file])
