--- a/data/app.gschema.xml.in
+++ b/data/app.gschema.xml.in
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<schemalist gettext-domain="dog">
-	<schema id="@appid@" path="/page/codeberg/SOrg/DogGTK/">
+<schemalist gettext-domain="doggo">
+	<schema id="@appid@" path="/app/drey/Doggo/">
 	</schema>
 </schemalist>
